--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -396,8 +396,8 @@
                     var key = "c" + d.Id.ToString();
                     <tr>
                         <td>@(isEnglish ? d.NameEng : d.NameFre)</td>
-                        <td class="text-center bg-success">@d.CurrentPositionHas</td>
-                        <td class="text-center bg-info">@d.ObjectivePositionHas</td>
+                        <td class="text-center bg-success">@Localizer[d.CurrentPositionHas]</td>
+                        <td class="text-center bg-info">@Localizer[d.ObjectivePositionHas]</td>
                     </tr>
                 }
             </tbody>
@@ -450,8 +450,8 @@
                         var key = "c" + d.Id.ToString();
                         <tr>
                             <td>@(isEnglish ? d.NameEng : d.NameFre) @(isEnglish ? d.DescEng : d.DescFre)</td>
-                            <td class="text-center bg-success">@d.CurrentPositionHas</td>
-                            <td class="text-center bg-info">@d.ObjectivePositionHas</td>
+                            <td class="text-center bg-success">@Localizer[d.CurrentPositionHas]</td>
+                            <td class="text-center bg-info">@Localizer[d.ObjectivePositionHas]</td>
                         </tr>
                     }
                 }
@@ -505,17 +505,17 @@
                                     </section>
                                 </td>
                                 <td class="text-center bg-success">
-                                    <a href="#@key2" aria-controls="mid-screen" class="overlay-lnk" role="button"><abbr title="Level @d.RatingValueCur Summary">@currentrating</abbr></a>
+                                    <a href="#@key2" aria-controls="mid-screen" class="overlay-lnk" role="button"><abbr title="Level @Localizer[d.RatingValueCur] Summary">@Localizer[currentrating]</abbr></a>
                                     <section id="@key2" class="wb-overlay modal-content overlay-def wb-popup-mid">
                                         <header class="modal-header">
-                                            <h2 class="modal-title">@Localizer["Current Position Level"]: @d.RatingValueCur</h2>
+                                            <h2 class="modal-title">@Localizer["Current Position Level"]: @Localizer[@d.RatingValueCur]</h2>
                                         </header>
                                         <div class="modal-body ">
                                             <p>@(isEnglish ? d.RatingNameCurEng : d.RatingNameCurFre) @(isEnglish ? d.RatingDescCurEng : d.RatingDescCurFre)</p>
                                             <p>@(isEnglish ? d.CompetencyLevelReqDescCurEng : d.CompetencyLevelReqDescCurFre)</p>
                                         </div>
                                         <header class="modal-header">
-                                            <h2 class="modal-title">@Localizer["Selected Position Level"]: @d.RatingValueObj</h2>
+                                            <h2 class="modal-title">@Localizer["Selected Position Level"]: @Localizer[d.RatingValueObj]</h2>
                                         </header>
                                         <div class="modal-body">
                                             <p>@(isEnglish ? d.RatingNameObjEng : d.RatingNameObjFre) @(isEnglish ? d.RatingDescObjEng : d.RatingDescObjFre)</p>
@@ -525,7 +525,7 @@
                                     </section>
                                 </td>
                                 <td class="text-center bg-info">
-                                    <a href="#@key2" aria-controls="mid-screen" class="overlay-lnk" role="button"><abbr title="Level @d.RatingValueObj Summary">@d.RatingValueObj</abbr></a>
+                                    <a href="#@key2" aria-controls="mid-screen" class="overlay-lnk" role="button"><abbr title="Level @Localizer[d.RatingValueObj] Summary">@Localizer[d.RatingValueObj]</abbr></a>
                                 </td>
                             </tr>
                         }
@@ -581,17 +581,17 @@
                                     </section>
                                 </td>
                                 <td class="text-center bg-success">
-                                    <a href="#@key2" aria-controls="mid-screen" class="overlay-lnk" role="button"><abbr title="Level @d.RatingValueCur Summary">@currentrating</abbr></a>
+                                    <a href="#@key2" aria-controls="mid-screen" class="overlay-lnk" role="button"><abbr title="Level @Localizer[d.RatingValueCur] Summary">@Localizer[currentrating]</abbr></a>
                                     <section id="@key2" class="wb-overlay modal-content overlay-def wb-popup-mid">
                                         <header class="modal-header">
-                                            <h2 class="modal-title">@Localizer["Current Position Level"]: @d.RatingValueCur</h2>
+                                            <h2 class="modal-title">@Localizer["Current Position Level"]: @Localizer[d.RatingValueCur]</h2>
                                         </header>
                                         <div class="modal-body ">
                                             <p>@(isEnglish ? d.RatingNameCurEng : d.RatingNameCurFre) @(isEnglish ? d.RatingDescCurEng : d.RatingDescCurFre)</p>
                                             <p>@(isEnglish ? d.CompetencyLevelReqDescCurEng : d.CompetencyLevelReqDescCurFre)</p>
                                         </div>
                                         <header class="modal-header">
-                                            <h2 class="modal-title">@Localizer["Selected Position Level"]: @d.RatingValueObj</h2>
+                                            <h2 class="modal-title">@Localizer["Selected Position Level"]: @Localizer[d.RatingValueObj]</h2>
                                         </header>
                                         <div class="modal-body">
                                             <p>@(isEnglish ? d.RatingNameObjEng : d.RatingNameObjFre) @(isEnglish ? d.RatingDescObjEng : d.RatingDescObjFre)</p>
@@ -601,7 +601,7 @@
                                     </section>
                                 </td>
                                 <td class="text-center bg-info">
-                                    <a href="#@key2" aria-controls="mid-screen" class="overlay-lnk" role="button"><abbr title="Level @d.RatingValueObj Summary">@d.RatingValueObj</abbr></a>
+                                    <a href="#@key2" aria-controls="mid-screen" class="overlay-lnk" role="button"><abbr title="Level @Localizer[d.RatingValueObj] Summary">@Localizer[d.RatingValueObj]</abbr></a>
                                 </td>
                             </tr>
                         }
