--- a/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
@@ -12,7 +12,7 @@
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/CCGMember/AllPositions">CCG Member</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Candidate/Index">External Candidate</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Student/Index">Student</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Contact">Contact Us</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Feedback">Contact Us</a></li>
             </ul>
         </div>
     </nav>
@@ -26,7 +26,7 @@
                     <li><a asp-page="/CCGMember/AllPositions">CCG Member</a></li>
                     <li><a asp-page="/Candidate/Index">External Candidate</a></li>
                     <li><a asp-page="/Student/Index">Student</a></li>
-                    <li><a asp-page="/Contact">Contact Us</a></li>
+                    <li><a asp-page="/Feedback">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -44,7 +44,7 @@ else
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/CCGMember/AllPositions">Membre de la GCC</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Candidate/Index">Candidat externe</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Student/Index">Étudiant</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Contact">Contactez-nous</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Feedback">Contactez-nous</a></li>
             </ul>
         </div>
     </nav>
@@ -59,7 +59,7 @@ else
                     <li><a asp-page="/CCGMember/AllPositions">Membre de la GCC</a></li>
                     <li><a asp-page="/Candidate/Index">Candidat externe</a></li>
                     <li><a asp-page="/Student/Index">Étudiant</a></li>
-                    <li><a asp-page="/Contact">Contactez-nous</a></li>
+                    <li><a asp-page="/Feedback">Contactez-nous</a></li>
                 </ul>
             </div>
         </div>
